@@ -31,6 +31,7 @@ ver 0.22 (not yet released)
 * lower the real-time priority from 50 to 40
 * switch to C++17
   - GCC 7 or clang 4 (or newer) recommended
+* doc: require sphinx_rtd_theme python module
 
 ver 0.21.16 (2019/10/16)
 * queue
